# llm-performance-viz

./: .gitignore  README.md  README_CN.md  pyproject.toml  run_auto_test.py  run_single_test.sh
src/llm_test_tool/: analytics_dashboard.html  auto_test.py  client.py  config.py  index.html  main.py  prompt.py  runner.py  viz_server.py
src/llm_test_tool/static/css/: main.css
src/llm_test_tool/static/js/: main.js
